--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 <!--
 Copyright 2010 Ramesh Nair (www.hiddentao.com)
-Modified 2013 Jiri Vrany (jiri.vrany@tul.cz)
+Copyright 2012 Jiri Vrany (jiri.vrany@tul.cz)
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -15,12 +17,10 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name='HandheldFriendly' content='true' />
-<meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no' />
+<meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0' />
 <title>Calculator</title>
 <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
@@ -29,32 +29,34 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 <input id="resultInput" type="text" value="" />
 <table id="basic" cellpadding="0" cellspacing="0">	
 	<tr>
-		<td><button data-keypress="47" data-char="&#247;">&#247;</button></td>
-		<td><button data-keypress="42" data-char="&#215;">&#215;</button></td>
-		<td><button data-keypress="45" data-char="&#45;">&#151;</button></td>
-		<td><button data-keypress="43" data-char="&#43;">&#43;</button></td>
+		<td><button class="operand" data-char="/">/</button></td>
+		<td><button class="operand" data-char="x">x</button></td>
+		<td><button class="operand" data-char="-">-</button></td>
+		<td><button class="operand" data-char="+">+</button></td>
 	</tr>
 	<tr>
-		<td><button data-keypress="55" data-char="7">7</button></td>
-		<td><button data-keypress="56" data-char="8">8</button></td>
-		<td><button data-keypress="57" data-char="9">9</button></td>
-		<td><button data-keydown="8" id="backspace">&laquo;</button></td>
+		<td><button data-char="7">7</button></td>
+		<td><button data-char="8">8</button></td>
+		<td><button data-char="9">9</button></td>
+		<td><button class="controls" id="backspace">&laquo;</button></td>
 	</tr>
 	<tr>
-		<td><button data-keypress="52" data-char="4">4</button></td>
-		<td><button data-keypress="53" data-char="5">5</button></td>
-		<td><button data-keypress="54" data-char="6">6</button></td>
-		<td><button data-keydown="46" id="clear">C</button></td>
+		<td><button data-char="4">4</button></td>
+		<td><button data-char="5">5</button></td>
+		<td><button data-char="6">6</button></td>
+		<td><button class="controls" id="clear">C</button></td>
 	</tr>
 	<tr>
-		<td><button data-keypress="49" data-char="1">1</button></td>
-		<td><button data-keypress="50" data-char="2">2</button></td>
-		<td><button data-keypress="51" data-char="3">3</button></td>
-		<td rowspan="2"><button data-keydown="13" id="equals">=</button></td>
+		<td><button data-char="1">1</button></td>
+		<td><button data-char="2">2</button></td>
+		<td><button data-char="3">3</button></td>
+		<td><button class="operand" id="equals">=</button></td>
 	</tr>
 	<tr>
-		<td><button data-keypress="46" data-char=".">.</button></td>
-		<td colspan="2"><button data-keypress="48" data-char="0">0</button></td>
+		<td><button data-char=".">.</button></td>
+		<td><button data-char="0">0</button></td>
+		<td><button class="controls" id="memset">M</button></td>
+		<td><button class="controls" id="memret">R</button></td>
 	</tr>
 </table>
 <script type="text/javascript" language="javascript" src="calc.js"></script>
